# service/api/user.go
@@ -35,7 +35,7 @@ func (rt *_router) setMyUserName(w http.ResponseWriter, r *http.Request, ps http
 		return
 	}
 	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
+		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 
@@ -123,4 +123,58 @@ func (rt *_router) getMyUser(w http.ResponseWriter, r *http.Request, ps httprout
 		_, _ = w.Write(json)
 
 	}
+}
+func (rt *_router) checknames(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
+	var richiesta []Utente // cerca tutti gli utenti che iniziano per una data stringa
+	var str string
+	cs, err := rt.AuthenticationApi(r)
+
+	if err != nil {
+		http.Error(w, "error: authentication user checkname "+err.Error(), http.StatusUnauthorized)
+		return
+	}
+	str = ps.ByName("username")
+	if len(str) == 0 {
+		http.Error(w, "error: username too short", http.StatusBadRequest)
+		return
+	}
+
+	if len(str) > 16 {
+		http.Error(w, "too long message", http.StatusBadRequest)
+		return
+	}
+	if str == "$" {
+		w.WriteHeader(http.StatusOK)
+		return
+	}
+	tmp, err := rt.db.CheckNames(cs, str)
+
+	if err != nil && strings.HasPrefix(err.Error(), "error in authentication Checknames:") {
+		http.Error(w, err.Error(), http.StatusUnauthorized)
+		return
+	}
+	if err != nil && strings.HasPrefix(err.Error(), "CheckNames: no user found:") {
+		http.Error(w, err.Error(), http.StatusNotFound)
+		return
+	}
+	if err != nil {
+		http.Error(w, "error in database: "+err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	richiesta = make([]Utente, len(tmp))
+	for i, user := range tmp {
+		richiesta[i] = NewUser(user)
+	}
+
+	w.Header().Set("content-type", "application/json")
+	json, err := json.Marshal(richiesta)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	_, _ = w.Write(json)
+
 }
